# shift-suite

./: .gitignore  000_overlap_investigation_report.md  100_percent_barrier_analysis.json  24_slot_complement_report.json  27486_problem_critical_analysis.py  27486_problem_final_investigation_report.py  A2_MANAGEMENT_COMMUNICATION_PACKAGE.md  A2_TEAM_COMMUNICATION_PACKAGE.md  A2_USER_COMMUNICATION_PACKAGE.md  A3_ALERT_SYSTEM.py  A3_DATA_QUALITY_MONITOR.py  A3_DATA_QUALITY_MONITOR_FIXED.py  A3_ERROR_LOG_MONITOR.py  A3_LIGHTWEIGHT_MONITORING.py  A3_MONITORING_SYSTEM.py  A3_PERFORMANCE_MONITOR.py  A3_SIMPLE_ERROR_LOG_MONITOR.py  A3_SIMPLE_PERFORMANCE_MONITOR.py  ACCURATE_FIX_EXPLANATION.md  ACHIEVEMENT_EVIDENCE_REPORT.md  ACTUAL_OUTPUT_QUALITY_ASSESSMENT.md  AGENTS.md  AI_ANALYSIS_PROMPT_PROFESSIONAL.md  AI_COMPREHENSIVE_REPORT_INTEGRATION_SUMMARY.md  AI_REPORT_FIX_SUMMARY.json  ANXIETY_RESOLUTION_COMPREHENSIVE_CHECK.md  APP_INTEGRATION_COMPLETION_SUMMARY.md  APP_PY_TEXT_ANALYSIS_OUTPUT_REPORT.md  APP_STARTUP_TEST_REPORT.md  AXIS1_AXIS2_INTEGRATION_REPORT.md  B1_QUALITY_ASSURANCE_FRAMEWORK.py  B2_COMPREHENSIVE_DOCUMENTATION.py  B3_PERFORMANCE_OPTIMIZATION.py  BLUEPRINT_PHASE1_SUMMARY.md  BLUEPRINT_PHASE2_INTEGRATION_REPORT.md  C1_FEATURE_EXPANSION.py  C1_FEATURE_EXPANSION_LITE.py  C1_implementation_summary.json  C2_5_Comprehensive_Test_Executor.py  C2_5_Comprehensive_Test_Results_20250803_233316.json  (+1173 more)
.claude/: settings.local.json
.serena/: project.yml
BACKUP_NEED_ORIGINAL_20250807_142246/: BACKUP_REPORT.txt  need_per_date_slot_role_介護.parquet  (+3 more)
assets/: c2-mobile.css  (+1 more)
(+660 files in other folders)
