[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-suite"
version = "0.9.0"
description = "Excel シフト表を解析・可視化するツール"
authors = [{name = "Shinya Fujimaki", email = "fuji1006@example.com"}]
requires-python = ">=3.12"

# ── 実行に必要な外部ライブラリ ──
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.20",
    "streamlit-plotly-events>=0.0.6",
    "streamlit>=1.34",
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "openpyxl>=3.1",
    "pillow>=10.0"
]

# ── パッケージに含めるソース ──
[tool.setuptools.packages.find]
where = ["."]
include = ["shift_suite*"]     # shift_suite とそのサブパッケージ全部
exclude = ["tests*"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "ipykernel"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
